bdr.BDR2.scala.error
Compilation error:
BDR2:4: error: illegal start of statement
  match readMessage {
  ^