bdr.BDR2.scala.code
var running = true;

while (running) {
  match readMessage {
    case "R" => {right(); forward();}
    case _ => running = false
  }
}